# hospital-access-control

backend/: .env  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0b51dd24c7ef_add_medical_record.py  2e014b76cc58_update_apointments_status.py  37ac408ad845_update_note_table.py  3cfbadbaa3ce_create_user_table_fasapi_users.py  775b6b4a5b21_create_user_table.py  9dffa130b4de_add_profile_data_to_user_model.py  a92a84cc8383_add_timestamps_to_user_table.py  cdb017e31048_update_user_table.py  e2b20011c01d_update_labtest_table.py  e537fa1ce1de_create_user_table.py  e7a6ed384fd5_create_tables_visit_vital_note_labtest.py  efa64824ade2_create_role_table.py  f1d8f0ddc280_create_appointment_table.py
backend/src/: main.py  utils.py
backend/src/account/: models.py  routes.py  schemas.py  services.py
backend/src/accounts/: models.py  routes.py  schemas.py  services.py
backend/src/appointment/: models.py  routes.py  schemas.py  services.py
backend/src/authentication/: routes.py  schemas.py  services.py
backend/src/core/: config.py  crud.py  database.py  dependecies.py  models.py  security.py  super_crud.py
backend/src/labtest/: models.py  routes.py  schemas.py  services.py
backend/src/note/: models.py  routes.py  schemas.py  services.py
backend/src/record/: models.py  routes.py  schemas.py  services.py
backend/src/utils/: crud.py  email.py  types.py
backend/src/visit/: dependencies.py  models.py  routes.py  schemas.py  services.py
backend/tests/: conftest.py
(+56 files in other folders)
